	'src/glassplay/dev_alsa.cpp'.
2016-01-21 Fred Gleason <fredg@paravelsystems.com>
	* Removed superfluous 'LOCAL_PATH' statments from 'configure.ac'.
2016-01-21 Fred Gleason <fredg@paravelsystems.com>
	* Implemented automatic reconnection for glassplayer(1).
2016-01-21 Fred Gleason <fredg@paravelsystems.com>
	* Extended automatic reconnection to detect data starvation and
	missing mountpoint conditions.
2016-01-22 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/glassplayer/glassplayer.cpp' that threw a
	segfault when the program was invoked with no arguments.
2016-01-26 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.1.
2016-01-28 Fred Gleason <fredg@paravelsystems.com>
	* Removed support for '--server-type=' option in
	'src/glassplayer/glassplayer.cpp'.
2016-01-28 Fred Gleason <fredg@paravelsystems.com>
	* Added support for handling M3U stream URLs.
2016-01-28 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug that caused GET requests to return 400 in
	'src/glassplayer/serverid.cpp'.
2016-01-28 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.2.
2016-01-29 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'README'.
2016-01-29 Fred Gleason <fredg@paravelsystems.com>
	* Implemented '--list-codecs' and '--list-devices' options for
	glassplayer(1) in 'src/glassplayer/glassplayer.cpp' and
	'src/glassplayer/glassplayer.h'.
2016-02-01 Fred Gleason <fredg@paravelsystems.com>
	* Stubbed out an HLS connector in 'src/glassplayer/conn_hls.cpp'
	and 'src/glassplayer/conn_hls.h'.
	* Added an 'M3uPlaylist' class in 'src/glassplayer/m3uplaylist.cpp'
	and 'src/glassplayer/m3uplaylist.h'.
2016-02-01 Fred Gleason <fredg@paravelsystems.com>
	* Added code in 'src/glassplayer/conn_hls.cpp' and
	'src/glassplayer/conn_hls.h' to update the index file automatically.
2016-02-03 Fred Gleason <fredg@paravelsystems.com>
	* Implemented audio playout from HLS streams.